# yolo_pointcloud_detect

./: CMakeLists.txt  README.md  package.xml
cfg/: params.yaml
include/yolo_pointcloud_detect/: Lidar_parser_base.h  box.hpp  config.h  infer.h  obstacle_detector.hpp  patchworkplusplus.hpp  projector_lidar.hpp  public.h  ukf.hpp  utils.h  utils.hpp
launch/: run.launch
src/: yolo_pointcloud_detect_node.cpp
src/yolo_infer/: calibrator.cpp  draw.cu  infer.cpp  postprocess.cu  preprocess.cu
